[gd_scene load_steps=4 format=3 uid="uid://b87cqyunlhsul"]

[ext_resource type="Script" path="res://scenes/level/base_level.gd" id="1_v4pmm"]
[ext_resource type="PackedScene" uid="uid://bqflvi2xo4pkv" path="res://scenes/game_camera/game_camera.tscn" id="2_go2xw"]
[ext_resource type="PackedScene" uid="uid://cpl5hkuemkr3r" path="res://scenes/level/level_segments/level_segment.tscn" id="3_vtkqs"]

[node name="BaseLevel" type="Node2D" node_paths=PackedStringArray("pos_list")]
script = ExtResource("1_v4pmm")
pos_list = [NodePath("StartPosition/Marker2D")]

[node name="GameCamera" parent="." instance=ExtResource("2_go2xw")]
unique_name_in_owner = true

[node name="StartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="StartPosition"]
position = Vector2(996, 700)

[node name="LevelSegments" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="LevelSegment" parent="LevelSegments" instance=ExtResource("3_vtkqs")]

[node name="LevelSegment2" parent="LevelSegments" instance=ExtResource("3_vtkqs")]
position = Vector2(2304, 0)

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188969, 0.188969, 0.188969, 1)
